# noos-api-cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  customdoxygen.css  doxy.conf
cmake/: colours.cmake  compiler.cmake  debug.cmake  dependencies.cmake  examples.cmake  install_config.cmake  install_library.cmake  noos-config.cmake  testing.cmake
examples/: age_detection.cpp  available_services.cpp  batch.cpp  chatbot.cpp  class.cpp  class_reactor.cpp  custom_error_handler.cpp  face_detect.cpp  face_detection.cpp  face_detection_opencv.cpp  face_expression.cpp  face_recognition.cpp  gender_detection.cpp  hazard_detect.cpp  human_detect.cpp  human_detection.cpp  icp_slam.cpp  keep_alive_test.cpp  knowrob_ontology.cpp  light_detection.cpp  loop.cpp  object_detection.cpp  object_recognition.cpp  object_recognition_my_own_models.cpp  orb.cpp  path_planning.cpp  picture_handling.cpp  qr_recognition.cpp  set_noise_profile.cpp  speech_recognition_google.cpp  speech_recognition_sphinx4.cpp  speech_to_text.cpp  text_to_speech.cpp  upload_delete_maps.cpp  vision_batch.cpp
noos/: CMakeLists.txt  noos  objects.hpp
noos/cloud/: CMakeLists.txt  available_services.cpp  available_services.hpp  callable.hpp  callable.tpl  chat.cpp  chat.hpp  cloud_base.hpp  cloud_base.impl  cloud_base.tpl  cloud_batch.hpp  default_error_handler.cpp  default_error_handler.hpp  deserialize.cpp  deserialize.hpp  goodbye.cpp  goodbye.hpp  hidden_accesor.hpp  includes.ihh  navigation.cpp  navigation.hpp  node.hpp  node.tpl  node_connection.hpp  vision_base.hpp  vision_batch.hpp  vision_batch.impl  vision_batch.tpl  vision_detection.cpp  vision_detection.hpp  vision_recognition.cpp  vision_recognition.hpp
noos/cloud/asio/: asio_handler.hpp  asio_handler.impl  asio_handler.tpl  asio_http.cpp  asio_http.hpp  asio_https.cpp  asio_https.hpp  asio_timer.cpp  asio_timer.hpp  http_header.cpp  http_header.hpp  http_post.cpp  http_post.hpp  http_request.cpp  http_request.hpp  http_request.tpl  http_response.cpp  http_response.hpp  includes.ihh  keep_alive.hpp  platform.cpp  platform.hpp
noos/misc/: includes.ihh  misc.hpp  opencv.hpp
noos/objects/: audio.cpp  audio.hpp  config_file.cpp  config_file.hpp  face.cpp  face.hpp  face_recognition_obj.cpp  face_recognition_obj.hpp  globals.hpp  human.cpp  human.hpp  includes.ihh  laser.cpp  laser.hpp  object.cpp  object.hpp  odometry.cpp  odometry.hpp  orb_object.hpp  orientation.hpp  orientation.tpl  person.cpp  person.hpp  picture.cpp  picture.hpp  point.cpp  point.hpp  point.tpl  pose.hpp  pose.tpl  qr_code.cpp  qr_code.hpp  time.cpp  time.hpp
rapp/: CMakeLists.txt  cloud.hpp  objects.hpp
rapp/cloud/: .vision_batch.cpp.swp  .vision_batch.hpp.swp  .vision_detection.cpp.swp  .vision_detection.hpp.swp  .vision_recognition.cpp.swp  .vision_recognition.hpp.swp  available_services.cpp  available_services.hpp  cloud_base.cpp  cloud_base.hpp  cloud_base.impl  default_error_handler.hpp  deserialize.cpp  deserialize.hpp  geolocation.cpp  includes.ihh  node.hpp  node.tpl  path_planning.cpp  path_planning.hpp  service_controller.cpp  service_controller.hpp  service_controller.impl  speech_recognition.cpp  speech_recognition.hpp  text_to_speech.cpp  text_to_speech.hpp  vision_batch.cpp  vision_batch.hpp  vision_batch.imp  vision_batch.impl  vision_detection.cpp  vision_detection.hpp  vision_recognition.cpp  vision_recognition.hpp
rapp/cloud/asio/: asio_handler.hpp  asio_handler.impl  asio_timer.hpp  http_header.cpp  http_header.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp
rapp/config/: config.hpp
rapp/misc/: includes.ihh  misc.hpp
rapp/objects/: includes.ihh  orb_object.hpp  qr_code.hpp
tests/: asio_classes.cpp  cloud_calls.cpp  json_classes.cpp  object_classes.cpp  vision_batch_test.cpp
tests/data/: cloud_class_laser_data.json  config_test.ini  get_map.json  json_classes_face_recognition.json  json_classes_laser.json  json_classes_odometry.json  json_classes_orientation.json  json_classes_point2d.json  json_classes_pose.json  json_classes_pose2d.json  platform.json  platform_file.json
